Bugfix black colour buttons on IOS

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -13,6 +13,7 @@ li {
 }
 
 button {
+  color: var(--color-primary-back);
   background-color: transparent;
   cursor: pointer;
 }
